<resources>
    <string name="app_name">Gootes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="check_out">CheckOut</string>
    <string name="categories"><b><i>CATEGORIES</i></b></string>
    <string name="already_user">Already a User? LogIn</string>
    <string name="user_name">Enter Username</string>
    <string name="pass_word">Enter Password</string>
    <string name="frt_pwd">Forgot Password?</string>
    <string name="login">SignIn</string>
    <string name="sign_up_page">New User? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="signin">SignIn</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="beverages">Beverages</string>
    <string name="grains">Grains</string>
    <string name="cleaning">Cleaning</string>
    <string name="beauty">Beauty</string>
    <string name="search">Search here</string>
    <string name="product_name">Product name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_price">Product price</string>
    <string name="add">Add to Cart</string>
    <string name="product_quality">Product Quality</string>
    <string name="price">Product price</string>
    <string name="product_image">Product image</string>
    <string name="product_details">Product details</string>
    <string name="quantity">Product quantity</string>
    <string name="prodname">Product name</string>
    <string name="remove">Remove</string>
    <string name="total">Total Amount:</string>
    <string name="mrp">MRP</string>
    <string name="cart">Cart</string>

</resources>
