<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/cart"
        app:titleTextColor="@color/colorWhite">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="118dp"
        android:layout_height="117dp"
        android:layout_below="@+id/toolbar"
        android:src="@drawable/apple" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/product_image"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/fab_margin">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name" />

        <TextView
            android:id="@+id/product_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_quality"/>

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linear_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="19dp"
        android:background="@color/colorAccent"
        android:text="@string/remove"
        android:textColor="@color/colorWhite"
        android:layout_alignParentRight="true"
        android:layout_marginRight="19dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            android:text="@string/total"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:textColor="@color/colorWhite"
            android:padding="@dimen/fab_margin"
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/total"
            android:text="@string/mrp"/>

        <Button
            android:textColor="@color/colorWhite"
            android:padding="@dimen/fab_margin"
            android:id="@+id/checkout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00ffffff"
            android:text="@string/check_out"
            android:layout_alignParentRight="true"/>


    </RelativeLayout>

</RelativeLayout>